--- a/config.yml
+++ b/config.yml
@@ -6,6 +6,10 @@ UNCSS_OPTIONS:
   ignore:
     - !!js/regexp .foundation-mq
     - !!js/regexp ^\.is-.*
+    - ".sticky.is-anchored"
+    - ".sticky.is-stuck"
+    - ".hero-splash .nav-bar a.is-active"
+    - ".hero-splash .nav-bar.is-stuck .logo"
 
 # Gulp will reference these paths when it copies files
 PATHS:
