Add classes for uncss

--- a/config.yml
+++ b/config.yml
@@ -10,6 +10,12 @@ UNCSS_OPTIONS:
     - ".sticky.is-stuck"
     - ".hero-splash .nav-bar a.is-active"
     - ".hero-splash .nav-bar.is-stuck .logo"
+    - ".js .nav-collapse"
+    - ".nav-collapse.opened"
+    - ".mask"
+    - ".android .mask"
+    - ".js-nav-active .mask"
+    - ".js .nav-collapse.closed"
 
 # Gulp will reference these paths when it copies files
 PATHS:
