Import necessary js partials

--- a/config.yml
+++ b/config.yml
@@ -53,10 +53,10 @@ PATHS:
     # Individual Foundation components
     # - "node_modules/foundation-sites/dist/js/plugins/foundation.abide.js"
     # - "node_modules/foundation-sites/dist/js/plugins/foundation.accordion.js" # keyboard
-    # - "node_modules/foundation-sites/dist/js/plugins/foundation.accordionMenu.js" # keyboard / nest
-    # - "node_modules/foundation-sites/dist/js/plugins/foundation.drilldown.js" # box / keyboard / nest
+    - "node_modules/foundation-sites/dist/js/plugins/foundation.accordionMenu.js" # keyboard / nest
+    - "node_modules/foundation-sites/dist/js/plugins/foundation.drilldown.js" # box / keyboard / nest
     # - "node_modules/foundation-sites/dist/js/plugins/foundation.dropdown.js" # box / keyboard / triggers
-    # - "node_modules/foundation-sites/dist/js/plugins/foundation.dropdownMenu.js" # box / keyboard / nest
+    - "node_modules/foundation-sites/dist/js/plugins/foundation.dropdownMenu.js" # box / keyboard / nest
     # - "node_modules/foundation-sites/dist/js/plugins/foundation.equalizer.js" # imageLoader / mediaQuery
     # - "node_modules/foundation-sites/dist/js/plugins/foundation.interchange.js" # mediaQuery
     - "node_modules/foundation-sites/dist/js/plugins/foundation.smoothScroll.js"
@@ -64,8 +64,8 @@ PATHS:
     # - "node_modules/foundation-sites/dist/js/plugins/foundation.offcanvas.js" # keyboard / mediaQuery / triggers
     # - "node_modules/foundation-sites/dist/js/plugins/foundation.orbit.js" # imageLoader / keyboard / motion / timer / touch
     # - "node_modules/foundation-sites/dist/js/plugins/foundation.responsiveAccordionTabs.js" # accordion / motion / tabs
-    # - "node_modules/foundation-sites/dist/js/plugins/foundation.responsiveMenu.js" # mediaQuery / triggers
-    # - "node_modules/foundation-sites/dist/js/plugins/foundation.responsiveToggle.js" # mediaQuery / motion
+    - "node_modules/foundation-sites/dist/js/plugins/foundation.responsiveMenu.js" # mediaQuery / triggers
+    - "node_modules/foundation-sites/dist/js/plugins/foundation.responsiveToggle.js" # mediaQuery / motion
     # - "node_modules/foundation-sites/dist/js/plugins/foundation.reveal.js" # keyboard / mediaQuery / motion / triggers
     # - "node_modules/foundation-sites/dist/js/plugins/foundation.slider.js" # keyboard / motion / touch / triggers
     - "node_modules/foundation-sites/dist/js/plugins/foundation.sticky.js" # mediaQuery / triggers
