Add proper lines

--- a/config.yml
+++ b/config.yml
@@ -16,6 +16,8 @@ UNCSS_OPTIONS:
     - ".android .mask"
     - ".js-nav-active .mask"
     - ".js .nav-collapse.closed"
+    - ".no-js .top-bar"
+    - ".no-js .title-bar"
 
 # Gulp will reference these paths when it copies files
 PATHS:
