Slim down on .util imports for smaller dist size

--- a/config.yml
+++ b/config.yml
@@ -34,18 +34,18 @@ PATHS:
 
     # Core Foundation files
     - "node_modules/foundation-sites/dist/js/plugins/foundation.core.js"
-    - "node_modules/foundation-sites/dist/js/plugins/foundation.util.*.js"
+    # - "node_modules/foundation-sites/dist/js/plugins/foundation.util.*.js"
 
     # Individual util files
-    # - "node_modules/foundation-sites/dist/js/plugins/foundation.util.box.js"
+    - "node_modules/foundation-sites/dist/js/plugins/foundation.util.box.js"
     # - "node_modules/foundation-sites/dist/js/plugins/foundation.util.imageLoader.js"
-    # - "node_modules/foundation-sites/dist/js/plugins/foundation.util.keyboard.js"
-    # - "node_modules/foundation-sites/dist/js/plugins/foundation.util.mediaQuery.js"
-    # - "node_modules/foundation-sites/dist/js/plugins/foundation.util.motion.js"
-    # - "node_modules/foundation-sites/dist/js/plugins/foundation.util.nest.js"
+    - "node_modules/foundation-sites/dist/js/plugins/foundation.util.keyboard.js"
+    - "node_modules/foundation-sites/dist/js/plugins/foundation.util.mediaQuery.js"
+    - "node_modules/foundation-sites/dist/js/plugins/foundation.util.motion.js"
+    - "node_modules/foundation-sites/dist/js/plugins/foundation.util.nest.js"
     # - "node_modules/foundation-sites/dist/js/plugins/foundation.util.timer.js"
     # - "node_modules/foundation-sites/dist/js/plugins/foundation.util.touch.js"
-    # - "node_modules/foundation-sites/dist/js/plugins/foundation.util.triggers.js"
+    - "node_modules/foundation-sites/dist/js/plugins/foundation.util.triggers.js"
 
     # Individual Foundation components
     # - "node_modules/foundation-sites/dist/js/plugins/foundation.abide.js"
