Tweak uncss settings

--- a/config.yml
+++ b/config.yml
@@ -6,6 +6,7 @@ UNCSS_OPTIONS:
   ignore:
     - !!js/regexp .foundation-mq
     - !!js/regexp ^\.is-.*
+    - !!js/regexp ^\.mfp-.*
     - ".sticky.is-anchored"
     - ".sticky.is-stuck"
     - ".desktop-nav-bar a.is-active"
