--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     ]
   },
   "dependencies": {
-    "foundation-sites": "6.5.3",
-    "jquery": "3.4.1",
+    "foundation-sites": "6.7.2",
+    "jquery": ">=2.2.0",
     "motion-ui": "^2.0.2",
     "what-input": ">=4.1.0"
   }
