--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "license": "MIT",
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
-    "gulp": "^4.0.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
     "gulp-cli": "^1.2.1",
     "gulp-concat": "^2.5.2",
@@ -19,9 +20,9 @@
     "gulp-load-plugins": "^1.1.0",
     "gulp-uglify": "^1.2.0",
     "gulp-uncss": "^1.0.1",
-    "panini": "^1.3.0",
+    "panini": "latest",
     "rimraf": "^2.4.3",
-    "yargs": "^3.8.0"
+    "yargs": "^13.3.0"
   },
   "repository": {
     "type": "git",
@@ -31,11 +32,5 @@
     "presets": [
       "es2015"
     ]
-  },
-  "dependencies": {
-    "foundation-sites": "6.7.2",
-    "jquery": ">=2.2.0",
-    "motion-ui": "^2.0.2",
-    "what-input": ">=4.1.0"
   }
 }
